Mehr Korrekturen an Innsmouth

--- a/The Shadow over Innsmouth/chapter2.tex
+++ b/The Shadow over Innsmouth/chapter2.tex
@@ -86,14 +86,14 @@ Nördlich des Flusses gab es Spuren verwahrlosten Lebens --- Aktive Fischverarbe
 
 Ein Detail, das mich beunruhigte war die Verbreitung der wenigen, schwachen Geräusche, die ich vernahm. Sie sollten normalerweise aus den sichtbar bewohnten Häusern kommen, doch waren sie in Wirklichkeit oft am lautesten aus den am stärksten vebarrikadierten Fassaden zu hören. Man konnte Knarzen, Trippeln und zweifelhafte, heisere Laute wahrnehmen und ich musste unbehaglich an die geheimen Tunnel denken, die der Junge vom Lebensmittelladen angedeutet hatte. Plötzlich ertappte ich mich dabei, wie ich mich fragte, wie wohl die Stimmen dieser Bewohner klingen mögen. Ich hatte bisher noch kein gesprochenes Wort in diesem Viertel vernommen und war unerklärlich bestrebt dies auch so zu belassen.
 
-Ich hastete aus dem abscheulichen Elendsviertel am Hafen und hielt nur lang genug an um mir zwei schöne, aber verfallene alte Kirchen in der Main und der Church Street anzuschauen. Mein nächstes logisches Ziel wäre New Church Green gewesen doch irgendwie konnte ich es nicht fertigbringen, noch einmal an der Kirche in deren Keller ich die unfassbar furchteinflößende Gestalt des mit dem seltsamen Diadem gekrönten Priester oder Pastor erspäht hatte, vorbeizugehen. Außerdem hatte mir der Junge aus dem Laden erzählt, dass die Kirchen sowie die Ordenshalle des Dagon keine angebrachten Viertel für Fremde waren.
+Ich hastete aus dem abscheulichen Elendsviertel am Hafen und hielt nur lang genug an um mir zwei schöne, aber verfallene alte Kirchen in der Main und der Church Street anzuschauen. Mein nächstes logisches Ziel wäre New Church Green gewesen doch irgendwie konnte ich es nicht fertigbringen, noch einmal an der Kirche vorbeizugehen, in deren Keller ich die unfassbar furchteinflößende Gestalt des mit dem seltsamen Diadem gekrönten Priester oder Pastor erspäht hatte. Außerdem hatte mir der Junge aus dem Laden erzählt, dass die Kirchen sowie die Ordenshalle des Dagon keine angebrachten Viertel für Fremde waren.
 
-Dementsprechend hielt ich mich nördlich, entlang der Main zur Martin, dann landeinwärts über die Federal Street, weit nördlich vom Green und betrat dann das verfallene Patrizierviertel der nördlichen Broad, Washington, Lafayette und Adams Street. Obwohl diese imposanten, alten Alleen schlecht befestigt und verwahrlost waren, war der Geist ihrer von Ulmen beschatteten Würde noch nicht ganz verflogen. Villa an Villa verlangte nach meinem Blick, die meisten baufällig und verbarrikadiert in mitten vernachlässigter Grundstücke doch ein bis zwei in jeder Straße zeigten Zeichen von Bewohnung. In der Washington Street stand eine Reihe von vier oder fünf in ausgezeichnetem Zustand mit fein gepflegten Rasen und Gärten. Die üppigste von Ihnen --- mit von weitläufigen Terrassen gesäumten Parterregärten, die sich bis zur Lafayette zurück erstreckten --- nahm ich für das Heim des alten Marsh, leidgeplagten Raffineriebesitzer.
+Dementsprechend hielt ich mich nördlich, entlang der Main zur Martin, dann landeinwärts über die Federal Street, weit nördlich vom Green und betrat dann das verfallene Patrizierviertel der nördlichen Broad, Washington, Lafayette und Adams Street. Obwohl diese imposanten, alten Alleen schlecht befestigt und verwahrlost waren, war der Geist ihrer von Ulmen beschatteten Würde noch nicht ganz verflogen. Villa an Villa verlangte nach meinem Blick, die meisten baufällig und verbarrikadiert in mitten vernachlässigter Grundstücke doch ein bis zwei in jeder Straße zeigten Zeichen von Bewohnung. In der Washington Street stand eine Reihe von vier oder fünf in ausgezeichnetem Zustand mit fein gepflegten Rasen und Gärten. Die üppigste von Ihnen --- mit von weitläufigen Terrassen gesäumten Parterregärten, die sich bis zur Lafayette zurück erstreckten --- hielt ich für das Heim des alten Marsh, den leidgeplagten Raffineriebesitzer.
 
-In all diesen Straßen war kein Lebewesen zu sehen und ich wunderte mich ob der Abwesenheit von Hunden und Katzen von Innsmouth. Außerdem verblüfften und beängstigten mich die vielen, sogar in den besterhaltenen Villen, komplett verschlossenen Fenster im dritten Stock und im Dachgeschoss. Heimlichkeit und Verschwiegenheit schienen in dieser totgewschiegenen Stadt von Fremdartigkeit und Tod allgegenwärtig und ich konnte dem Gefühl nicht entkommen, von allen Seiten aus dem Hinterhalt von durchtrieben starrenden Augen beobachtet zu werden, die sich nie verschlossen.
+In all diesen Straßen war kein Lebewesen zu sehen und ich wunderte mich ob der Abwesenheit von Hunden und Katzen in Innsmouth. Außerdem verblüfften und beängstigten mich die vielen, sogar in den besterhaltenen Villen, komplett verschlossenen Fenster im dritten Stock und im Dachgeschoss. Heimlichkeit und Verschwiegenheit schienen in dieser totgeschwiegenen Stadt voll von Fremdartigkeit und Tod allgegenwärtig und ich konnte dem Gefühl nicht entkommen, von allen Seiten aus dem Hinterhalt von durchtrieben starrenden, sich niemals schließenden Augen beobachtet zu werden.
 
-Ich erzitterte als die gesprungene Glocke in einem Turm zu meiner linken Drei schlug. Nur zu gut erinnerte ich mich an die plumpe Kirche von aus der diese Töne drangen. Der Washington Street zum Fluss hin folgend, sah ich mich nun einem ehealigen Industrie- und Handelsviertel gegenüber, die Ruine einer Fabrik voraus bemerkend und sah weitere, mit den Spuren eines alten Bahnhofs und einer überdachten Eisenbahnbrücke jenseits davon, oberhalb der Schlucht zu meiner Rechten.
+Ich erzitterte als die gesprungene Glocke in einem Turm zu meiner linken Drei schlug. Nur zu gut erinnerte ich mich an die plumpe Kirche von aus der diese Töne drangen. Ich folgte der Washington Street zum Fluss hin und sah ich mich nun einem ehealigen Industrie- und Handelsviertel gegenüber, bemerkte die Ruine einer Fabrik voraus und sah weitere, mit den Spuren eines alten Bahnhofs und einer überdachten Eisenbahnbrücke jenseits davon, oberhalb der Schlucht zu meiner Rechten.
 
-Die unsichere Brücke vor mir war mit einem Warnschild versehen, doch ich nahm das Risiko auf mich und überquerte sie um wieder zum südlichen Ufer zurückzukeheren, wo die Spuren des Lebens wieder zum Vorschein kamen. Verstohlene, watschelnde Kreaturen starrten hintergründig in meine Richtung und normalere Gesichter betrachteten mich kalt und neugierig. Innsmouth wurde rasch unertragbar und ich bog in die Paine Street in Richtung des Platzes in der Hoffnung, dass mich irgendein Fahrzeug vor der noch in weiter Ferne liegenden Abfahrtszeit jenes finsteren Busses nach Arkham bringen könnte.
+Die unsichere Brücke vor mir war mit einem Warnschild versehen, doch ich nahm das Risiko auf mich und überquerte sie um wieder zum südlichen Ufer zurückzukeheren, wo die Spuren des Lebens wieder zum Vorschein kamen. Verstohlene, watschelnde Kreaturen starrten hintergründig in meine Richtung und normalere Gesichter betrachteten mich kalt und neugierig. Innsmouth wurde rasch unerträglich und ich bog in die Paine Street in Richtung des Platzes in der Hoffnung, dass mich irgendein Fahrzeug vor der noch in weiter Ferne liegenden Abfahrtszeit jenes finsteren Busses nach Arkham bringen könnte.
 
-Da sah ich die das baufällige Spritzenhaus zu meiner linken und bemerkte den rotgesichtigen, rauschebärtigen, triefäugigen alten Mann in unscheinbaren Lumpen, der davor auf einer Bank saß und mit zwei zerzausten, aber nicht unnormal aussehenden Feuerwehrleuten sprach. Dies musste natürlich Zadok Allen sein, der halb verrückte, trunksüchtige Neunzigjährige, dessen Märchen vom alten Innsmouth und seinem Schatten so sceheußlich und unglaublich waren.
+Da sah ich die das baufällige Spritzenhaus zu meiner linken und bemerkte den rotgesichtigen, rauschebärtigen, triefäugigen alten Mann in unscheinbaren Lumpen, der davor auf einer Bank saß und mit zwei zerzausten, aber nicht unnormal aussehenden Feuerwehrleuten sprach. Dies musste natürlich Zadok Allen sein, der halb verrückte, trunksüchtige Neunzigjährige, dessen Märchen vom alten Innsmouth und seinem Schatten so scheußlich und unglaublich waren.
