--- a/The Shadow over Innsmouth/chapter1.tex
+++ b/The Shadow over Innsmouth/chapter1.tex
@@ -72,8 +72,9 @@ Im krassen Gegensatz zum Anblick der Tiara stand ihre kurze und langweilige, von
 
 Miss Tilton, die alle möglichen Hypothesen zu Herkunft und Gegenwart der Tiara in Neuengland verglich, war geneigt zu glauben, dass sie einen Teil eines exotischen Piratenschatzes bildete, der vom alten Käpt'n Obed Marsh entdeckt worden war. Dieser Standpunkt wurde noch untermauert durch die ständigen Kaufangebote zu einem hohen Preis, die die Marshes zu unterbreiten begannen, sobald sie von ihrer Präsenz erfahren hatten und die sie bis heute wiederholten, trotz der unveränderlichen Entschiedenheit der Gesellschaft, nicht zu verkaufen.
 
-WÄhrend die gute Dame mich auf dem Gebäude führte, klärte sie mich auf, dass die Piratentheorie zum Marsh-Vermögen unter den vernünftigen Menschen der Region gängig war. Ihre eigene Einstellung zum düsteren Innsmouth --- das sie nie gesehen hatte --- war eine geprägt von Abscheu gegenüber einer Gemeinde, die auf der kulturellen Skala weit abglitt und sie versicherte mir, dass die Gerüchte über Teufelsanbetung teils durch einen absonderlichen, geheimen Kult, der dort Fuß gefasst und alle orthodoxen Kirchen verschluckt hatte, bestätigt würden.
+Während die gute Dame mich auf dem Gebäude führte, klärte sie mich auf, dass die Piratentheorie zum Marsh-Vermögen unter den vernünftigen Menschen der Region gängig war. Ihre eigene Einstellung zum düsteren Innsmouth --- das sie nie gesehen hatte --- war eine geprägt von Abscheu gegenüber einer Gemeinde, die auf der kulturellen Skala weit abglitt und sie versicherte mir, dass die Gerüchte über Teufelsanbetung teils durch einen absonderlichen, geheimen Kult, der dort Fuß gefasst und alle orthodoxen Kirchen verschluckt hatte, bestätigt würden.
 
 Er wurde \glqq Der esoterische Orden des Dagon\grqq  genannt und war zweifelsohne eine minderwertige, quasi-heidnische Sache, die vor einem Jahrhundert, zu einer Zeit als die Innsmouther Fischgründe zu veröden drohten, importiert worden war. Seine Hartnäckigkeit unter einfältigen Leuten war sehr verständlich in Anbetracht der plötzlichen und dauerhaften Rückkehr überreichlichen Fischfangs und bald wurde er zum größten Einfluss auf die Stadt, die Freimaurerei komplett ersetzend und ließ sich bald in der alten Logenhalle am new Church Green nieder.
 
-Für die frömmige Miss Tilton ergab dies einen ausgezeichneten Grund, die alte Stadt der Verwesung und der Einöde zu meiden,  doch für mich war es lediglich ein weiterer Anreiz. Zu meinen architektonischen und historischen Erwartungen gesellte sich nun noch ein intensiver Eifer und ich konnte kaum schlafen in meinem kleinen Zimmer in der \glqq Y\grqq\ während die Nacht verging.
+\looseness=1
+Für die frömmige Miss Tilton ergab dies einen ausgezeichneten Grund, die alte Stadt voll Verwesung und Einöde zu meiden, doch für mich war es lediglich ein weiterer Anreiz. Zu meinen architektonischen und historischen Erwartungen gesellte sich nun noch ein intensiver Eifer und ich konnte kaum schlafen in meinem kleinen Zimmer in der \glqq Y\grqq\ während die Nacht verging.
