--- a/The Shadow over Innsmouth/chapter3.tex
+++ b/The Shadow over Innsmouth/chapter3.tex
@@ -14,27 +14,27 @@ Ich wählte meinen Weg gemäß der Karte, die der Junge aus dem Lebensmittellade
 
 Ich begann, meine Fühler auszustrecken während wir die Water Street entlang gingen und uns in mitten der allgegenwärtigen Trostlosigkeit und wirr geneigten Ruinen nach Süden wandten, doch ich fand das die alte Zunge sich nicht so schnell wie ich erhofft hatte, lösen ließ. Nach einiger Zeit sah ich eine grasbewachsene Öffnung zur See hin zwischen verfallenen Ziegelmauern, jenseits derer sich verunkrauteten Ausdehnungen einer alten Werft aus Lehm und Stein zeigten. Haufen von moosbewachsenen Steinen nahe am Wasser versprachen passable Sitzplätze und der Ort war vor jedem möglichen Blick geschützt durch ein zerstörtes Lagerhaus im Norden. Die Aura von Tod und Verlassenheit war morbide und der Fischgestank fast unerträglich, doch ich hatte beschlossen, mich durch nichts abschrecken zu lassen.
 
-Etwa vier Stunden verblieben mir für Konversation, wenn ich den Acht-Uhr-Bus nach Arkham erwischen wollte und ich begann, dem uralten Säufer mehr Schnaps auszuteilen, während ich meine eigene bescheidene Mahlzeit zu mir nahm. Ich gab acht, bei meinen Ausschenkungen nicht über's Ziel hinauszuschießen, denn ich wollte Zadoks weinselige Geschwätzigkeit nicht in einen Stupor übergehen lassen. Nach einer Stunde schien seine verstohlene Schweigsamkeit allmählich zu verschwinden, doch zu meiner Enttäuschung wich er meinen Fragen über Innsmouth und seine von Schatten heimgesuchte Vergangenheit nach wie vor aus. Er plapperte über aktuelle Themen und zeigte gute Kenntnis der Zeitung und eine starke Tendenz dazu, zu Philosophieren in der Art eines moralisierenden Dörflers.
+Etwa vier Stunden verblieben mir für Konversation, wenn ich den Acht-Uhr-Bus nach Arkham erwischen wollte und ich begann, dem uralten Säufer mehr Schnaps auszuteilen, während ich meine eigene bescheidene Mahlzeit zu mir nahm. Ich gab acht, bei meiner Ausschank nicht über's Ziel hinauszuschießen, denn ich wollte Zadoks weinselige Geschwätzigkeit nicht in einen Stupor übergehen lassen. Nach einer Stunde schien sein Stillschweigen allmählich zu verschwinden, doch zu meiner Enttäuschung wich er meinen Fragen über Innsmouth und seine von Schatten heimgesuchte Vergangenheit nach wie vor aus. Er plapperte über aktuelle Themen und zeigte gute Kenntnis der Zeitung und eine starke Tendenz dazu, in der Art eines moralisierenden Dörflers zu philosophieren.
 
-Zum Ende der zweiten Stunde hin fürchtete ich, mein Quart Whiskey würde nicht ausreichen um Ergebnisse hervorzubringen und fragte mich, ob ich den alten Zadok verlassen und mehr besorgen sollte. Just dann jedoch, eröffnete mir das Glück das, was meine Fragen nicht erbringen konnten und das weitschweifende Gerede des keuchenden Alten nahm eine Wendung, die mich nach vorne lehnen und aufmerksam zuhören ließ. Ich saß mit dem Rücken hin zur fischig stinkenden See, doch er war ihr zugewandt und irgendetwas hatte seinen wandernden Blick auf die flache, weit entfernte Silhouette von Devil Reef gelenkt, das zu der Zeit klar und geradezu faszinierenderweise über die Wellen ragte. Dieser Anblick schien ihm zu missfallen, denn er begann eine Reihe schwache Flüche auszustoßen, die in einem vertraulichen Flüstern und einem wissenden Blick endeten. Er beugte sich zu mir, packte meinen Rockaufschlag und zischte einige Anspielungen, die nicht misszuverstehen waren.
-\glqq Das is' wo's alles angefangen hat --- der verfluchte Ort aller Boshaftigkeit wo das tiefe Wasser beginnt. Höllentor --- eine Klippe bis zu deren Grund keine Lotschnur reicht. Der alte Käpt'n Obed hat's getan --- er hat aufn Südseeinseln mehr rausgefund'n als gut für ihn war.
+Zum Ende der zweiten Stunde hin fürchtete ich, mein Quart Whiskey würde nicht ausreichen um Ergebnisse hervorzubringen und fragte mich, ob ich den alten Zadok verlassen und mehr besorgen sollte. Just dann jedoch, eröffnete mir das Glück das, was meine Fragen nicht erbringen konnten und das weitschweifende Gerede des keuchenden Alten nahm eine Wendung, die mich nach vorne lehnen und aufmerksam zuhören ließ. Ich saß mit dem Rücken hin zur nach Fisch stinkenden See, doch er war ihr zugewandt und irgendetwas hatte seinen wandernden Blick auf die flache, weit entfernte Silhouette von Devil Reef gelenkt, das zu der Zeit klar und geradezu faszinierend über die Wellen ragte. Dieser Anblick schien ihm zu missfallen, denn er begann eine Reihe schwache Flüche auszustoßen, die in einem vertraulichen Flüstern und einem wissenden Blick endeten. Er beugte sich zu mir, packte meinen Rockaufschlag und zischte einige Anspielungen, die nicht misszuverstehen waren.
+\glqq Das is' wo's alles angefangen hat --- der verfluchte Ort aller Bosheit wo das tiefe Wasser beginnt. Höllentor --- eine Klippe bis zu deren Grund keine Lotschnur reicht. Der alte Käpt'n Obed hat's getan --- er hat auf'n Südseeinseln mehr rausgefund'n als gut für ihn war.
 
 % venter -- Bauch -> Schiffsbauch? to make a venter -> Einen Schiffsbauch voll Ware umschlagen? -> Geschäfte machen?
 Alle war'n übel dran damals. Handel brach ein, die Fabriken ham' Aufträge verlor'n, sogar die neuen --- un' die besten von unser'n Leuten verlor'n durch Kaperei im Krieg von 1812 oder mit der Brigg Eliza und der alten Schnau Ranger --- beides Gilman-Schiffe. Obed Marsh, er hatte drei Schiffe zu Wasser --- Brigantine \textit{Columby}, Brigg \textit{Hetty} und die Bark \textit{Sumatry Queen}. Er war der einz'ge Käpt'n der Ostindien- und Pazifik-Handel betrieb, obwohl Esdras Martins Barkentine \textit{Malay Pride} da noch Achtundzwanzig Geschäfte gemacht hat.
 
-Aber 's gab keinen wie Käpt'n Obed, den alten Satansbraten! Hehe! Ich kann ihm nich übel nehmen was er von der Ferne erzählt hat un' wie er die Leute dumm genannt hat, weil sie in die christliche Messe gingen un' ihre Last in Demut und Beschei'nheit getrag'n hab'n! Sagte, die soll'n sich bess're Götter suchen, wie welche von denen auf den Westinnischen sie ha'n, die wür'n guten Fischfang liefern im Austausch für deren Opfer un' wür'n wirklich auf Gebete hör'n!
+Aber 's gab keinen wie Käpt'n Obed, den alten Satansbraten! Hehe! Ich kann ihm nich übel nehmen, was er von der Ferne erzählt hat un' wie er die Leute dumm genannt hat, weil sie in die christliche Messe gingen un' ihre Last in Demut und Beschei'nheit getrag'n hab'n! Sagte, die soll'n sich bess're Götter such'n, wie welche von denen auf'n Westinnischen sie ha'n, die wür'n guten Fischfang liefern im Austausch für der'n Opfer un' wür'n wirklich auf Gebete hör'n!
 
-Matt Eliot, sein erster Maat hat auch viel erzählt, aber er war dageg'n, dass die Leut' irgendwelchen Heidenkram tun! Hat von 'ner Insel östlich von Otaheite erzählt, wo's viele steinerne Ruinen gab', älter als ir'ndwer 's hätte sag'n können, so ähnlich wie die auf Ponape in den Karolinen aber mit Schnitzerei'n von Gesichtern wie die groß'n Statuen auf der Osterinsel. Da war auch 'ne kleine Vulkaninsel in der Nähe mit anderen Schnitzereien --- Ruinen abgeschliffen als wär'n sie einmal unter'm Meer gewesen un' mit Bildern von furchtbar'n Monstern überall.
+Matt Eliot, sein erster Maat hat auch viel erzählt, aber er war dageg'n, dass die Leut' ir'ndwelchen Heidenkram tun! Hat von 'ner Insel östlich von Otaheite erzählt, wo's viele steinerne Ruinen gab', älter als ir'ndwer 's hätte sag'n können, so ähnlich wie die auf Ponape in den Karolinen aber mit Schnitzerei'n von Gesichtern wie die groß'n Statuen auf der Osterinsel. Da war auch 'ne kleine Vulkaninsel in der Nähe mit anderen Schnitzereien --- Ruinen abgeschliffen als wär'n sie einmal unter'm Meer gewesen un' mit Bildern von furchtbar'n Monstern überall.
 
-Also, Matt sagte die Eingebor'nen da hätten all den Fisch gehabt, den sie fangen konnt'n und hatten' Armbänder un' Armreife un' Kopfschmuck aus 'nem seltsamen Gold und voll mit Bildern von Monstern genau wie die in die Ruinen auf der kleinen Insel gehauen waren --- ir'ndwie Fischfrösche oder Froschfische in allen möglichen Position'n als wär'n's Menschen. Keiner hat aus denen rausbekommen wo die all das Zeug herhatten un' all die ander'n Eingeborenen ha'n sich gefragt, wie die soviel Fisch finden konnten, wenn schon die nächste Insel magere Fänge hatte. Matt hat sich das auch gefragt un' auch Käpt'n Obed. Obed hat auch bemerkt, dass viele von den schönen, jungen Leuten auf Nimmerwiederseh'n verschwanden Jahr für Jahr un' dass 's da nich viele Alte gab. Außerdem, dachte er, sah'n manche von den Menschen verdammt merkwürdig aus, sogar für Kanaken.
+Also, Matt sagte, die Eingebor'nen da hätten all den Fisch gehabt, den sie fangen konnt'n und hatten' Armbänder un' Armreife un' Kopfschmuck aus 'nem seltsamen Gold und voll mit Bildern von Monstern genau wie die in die Ruinen auf der kleinen Insel gehauen waren --- ir'ndwie Fischfrösche oder Froschfische in allen möglichen Position'n als wär'n's Menschen. Keiner hat aus denen rausbekommen wo die all das Zeug herhatten un' all die ander'n Eingeborenen ha'n sich gefragt, wie die soviel Fisch finden konnten, wenn schon die nächste Insel magere Fänge hatte. Matt hat sich das auch gefragt un' auch Käpt'n Obed. Obed hat auch bemerkt, dass viele von den schönen, jungen Leuten auf Nimmerwiederseh'n verschwanden Jahr für Jahr un' dass 's da nich viele Alte gab. Außerdem, dachte er, sah'n manche von den Menschen verdammt merkwürdig aus, sogar für Kanaken.
 
 's brauchte schon Obed um die Wahrheit aus den Ungläub'gen rauszukrieg'n. Ich weiß nich' wie aber er hat Handel für die Gold-Dinger, die die getragen haben angefangen. Hat gefragt wo die herkamen un' ob sie mehr davon beschaffen könn'n un' hat schließlich die ganze Geschichte aus dem alten Häuptling --- Walakea wurde der genannt. Niemand außer Obed hätte dem alten Teufel je geglaubt, aber der Käpt'n konnte die Leute lesen wie Bücher. Hehe! Mir glaubt niemand wenn ich das ihnen erzähl' un' Du wahrscheinlich auch nicht, Junge --- obwohl, wenn ich dich so anseh, Du hast genauso scharfe Augen wie der alte Obed sie hatte.\grqq
 
-Das Geflüster des alten Mannes wurde schwächer und ich fand mich selbst erzitternd ob der fürchterlichen und aufrichtigen Ungeheuerlichkeit seines Tonfalls, obwohl ich wusste, dass seine Erzählung nichts als trunkene Phantasie sein kann.
+Das Geflüster des alten Mannes wurde schwächer und ich fand mich selbst erzitternd ob der fürchterlichen und aufrichtigen Ungeheuerlichkeit seines Tonfalls, obwohl ich wusste, dass seine Erzählung nichts als trunkene Fantasie sein kann.
 
 \glqq Also mein Herr, Obed lernte, dass es da Dinge auf dieser Erde gibt, von denen die meist'n Leute nie gehört ha'n --- un' die sie nicht glauben wür'n wenn sie sie hörten. Anscheinend haben diese Kanaken haufenweise ihre jungen Männer und Frau'n geopfert an irgendso 'ne Art Götterwesen die unter'm Meer lebten und ha'n alle möglichen Gefälligkeiten dafür bekommen. Sie haben die Wesen auf der kleinen Insel mit den selstam'n Ruinen getroffen un' anscheinend sollten die furch'baren Bilder von Froschfischmosntern Bilder von denen sein. Vielleicht war'n das die Viecher von denen all die Meerjungfrau'ngeschichten und so weiter entsprungen sind. Die hatten jede Menge Städte am Meeresgrund un' diese Insel war von dort abgehob'n. Anscheinend lebten ein'ge von den Dingern in den Steinbauten als die Insel sich plötzlich an die Oberfläche erhob. So ha'n die Kanaken Wind davon bekommen, dass sie da unten war'n. Hab'n mit Zeichensprache 'n Handel ausgemacht, sobald sie ihre Angst überkomm'n hatten.
 
-Die Dinger mochten Mensch'nopfer! Hatten sie vor Urzeiten, aber ha'n die Oberwelt aus'n Augen verlor'n nach ein'ger Zeit. Was sie den Opfern angetan ha'n kann ich nich sagen un' ich glaub' Obed war nich allzu scharf drauf zu fragen. Aber die Heiden war'n einverstanden, weil sie 'ne harte Zeit gehabt hatten und generell verzweifelt war'n. Sie haben zweimal im Jahr den Seedingern eine bestimmte Zahl junge Menschen übergeben --- am Vorabend zum Mai und zu Halloween --- ganz regelmäßig. Ha'n außerdem was von dem geschnitzten Krimskrams, den sie hergestellt haben übergeb'n. Im Ge'nzug ha'n die Dinger jede Menge Fisch geliefert --- ha'n die von überall im Meer herbeigetrieben --- un' hier un' da gab's auch so 'n paar von den goldartigen Dingern.
+Die Dinger mochten Mensch'nopfer! Hatten sie vor Urzeiten, aber ha'n die Oberwelt aus'n Augen verlor'n nach ein'ger Zeit. Was sie den Opfern angetan ha'n kann ich nich sagen un' ich glaub' Obed war nich allzu scharf drauf zu fragen. Aber die Heiden war'n einverstanden, weil sie 'ne harte Zeit gehabt hatten und generell verzweifelt war'n. Sie haben zweimal im Jahr den Seedingern eine bestimmte Zahl junge Menschen übergeben --- am Vorabend zum Mai und zu Halloween --- ganz regelmäßig. Ha'n außerdem was von dem geschnitzten Krimskrams, den sie hergestellt haben übergeb'n. Im Ge'nzug ha'n die Dinger jede Menge Fisch geliefert --- ha'n die von überall im Meer herbei getrieben --- un' hier un' da gab's auch so 'n paar von den goldartigen Dingern.
 
 Nun, wie gesagt, ha'n die Eingebor'nen die Dinger auf der kleinen Vulkaninsel getroffen --- sind in Kanus hin mit Opfern un'soweiter un' brachten von da welche von den goldigen Juwel'n wenn's welche gab. Zuerst sind die Viecher nich' auf die Hauptinsel, aber nach 'ner Weile wollten sie dann doch. Scheint als wär' den'n danach gewesen, sich unter die Mensch'n zu mischen un' zusammen Zeremonien an den großen Tagen abhalten --- Maiabend und Hallowe'en. Schau ma', die konnten sowohl im als auch über'm Wasser leben --- nennt man Amphibien, glaub' ich. Die Kanaken haben den' erzählt, dass die anderen Inselvölker sie ausrotten wollen, wenn sie Wind bekommen, dass die hier sind aber die meinten nur, das kümmere sie nich', weil sie die ganze Menschenbrut ausrott'n könnt'n, wenn sie sich die Mühe machen wollten --- das heißt, alle, die nich' bestimmte Zeichen kennen, wie sie einst von den verlor'n'n Großen Alten benutzt wur'n, wer immer die auch war'n. Aber weil sie da keine Lust drauf hatt'n, ha'n sie sich bedeckt gehalt'n wenn ir'ndwer die Insel besucht hat.
 
@@ -54,7 +54,7 @@ Das traf Obed natürlich sehr hart, da auch seine sonst'gen Geschäfte schlecht 
 
 Zu der Zeit begann Obed auf die Leute zu fluchen, weil sie dumme Schafe seien un' zum christlischen Himmel bet'n, der ihnen nix half. Er hat ihnen erzählt, er kenne Leute, die beteten zu Göttern, die das geben, was man wirklich braucht un' wenn genug Männer zu ihm stünden, könnt' er vielleicht gewisse Kräfte anrufen, die jede Menge Fisch un' ein'ges an Gold bringen wür'n. Auf je'n Fall wusst'n die, die auf der \textit{Sumatry Queen} gedient hatten un' die Insel kannt'n, was er meinte un' war'n nich sehr begierig, den Seeviechern von denen sie gehört hatt'n nahe zu komm'n aber die, die nich' wusst'n worum's ging wurd'n von dem, was Obed zu erzählen hatte beeinflusst un' fingen an, ihn zu frag'n, was er tun könne um sie auf den Pfad des Glaubens zu schicken, der ihnen Ergebnisse liefere.\grqq
 
-Hier kam der alte Mann ins Stocken, brummelte und verfiel in eine mürrische und besorgte Stille, schaute nevös über seine Schulter und drehte sich dann um um fasziniert das entfernte schwarze Riff anzustarren. Als ich ihn ansprach, antwortete er nicht, da wusste ich, dass ich ihn die Flasche leeren lassen müsste. Das irrsinnige Seemansgarn, das ich zu hören bekam, interessierte mich ungemein, denn ich wähnte darin eine Art kruder Allegorie, basierend auf der Fremdartigkeit von Innsmouth und ausgearbeitet durch eine Vorstellungskraft, die gleichzeitig kreativ und voll von Fetzen exotischer Legenden ist. Nicht für einen Moment glaubte ich, dass die Geschichte irgendeine haltbare Grundlage besaß, doch nichtsdestoweniger enthielt der Bericht einen Hauch wahren Schreckens. und wenn auch nur durch Verweise auf seltsame Juwelen, die klar der unheilvollen Tiara ähnelten, die ich in Newburyport gesehen hatte. Vielleicht waren diese Ornamente wirklich von irgendeiner absonderlichen Insel gekommen und möglicherweise waren die wilden Geschichten Lügen des verflossenen Obed selbst, statt dieses antiken Saufboldes.
+Hier kam der alte Mann ins Stocken, brummelte und verfiel in eine mürrische und besorgte Stille, schaute nervös über seine Schulter und drehte sich dann um um fasziniert das entfernte schwarze Riff anzustarren. Als ich ihn ansprach, antwortete er nicht, da wusste ich, dass ich ihn die Flasche leeren lassen müsste. Das irrsinnige Seemannsgarn, das ich zu hören bekam, interessierte mich ungemein, denn ich wähnte darin eine Art kruder Allegorie, basierend auf der Fremdartigkeit von Innsmouth und ausgearbeitet durch eine Vorstellungskraft, die gleichzeitig kreativ und voll von Fetzen exotischer Legenden ist. Nicht für einen Moment glaubte ich, dass die Geschichte irgendeine haltbare Grundlage besaß, doch nichtsdestoweniger enthielt der Bericht einen Hauch wahren Schreckens. und wenn auch nur durch Verweise auf seltsame Juwelen, die klar der unheilvollen Tiara ähnelten, die ich in Newburyport gesehen hatte. Vielleicht waren diese Ornamente wirklich von irgendeiner absonderlichen Insel gekommen und möglicherweise waren die wilden Geschichten Lügen des verflossenen Obed selbst, statt dieses antiken Saufboldes.
 
 Ich übergab Zadok die Flasche und er leerte sie bis zum letzten Tropfen. Es war sonderbar, dass er soviel Whiskey vertragen konnte, denn nicht eine Spur von Schwere hatte seine Zunge überkommen in ihrer hohen, keuchenden Stimme. Er leckte die Öffnung der Flasche ab und steckte sie in seine Tasche, dann begann er zu nicken und leise in sich hinein zu flüstern. Ich beugte mich nahe zu ihm heran um irgendwelche verständlichen Worte, die er von sich geben möge zu erhaschen und ich glaubte, ein bitteres Lächeln hinter dem befleckten, buschigen Schnurrbart zu sehen. Ja --- er formte tatsächlich Worte und ich konnte einen Gutteil davon verstehen.
 
@@ -70,7 +70,7 @@ Die wässrig blauen Augen wirkten jetzt fast grausam und wahnsinnig und der drec
 
 Der alte Mann wurde hysterisch und ich begann vor unbenannter Furcht zu erzittern. Er legte eine knorrige Klaue auf meine Schulter und mir schien, dass ihr Zittern ganz und gar nicht von Heiterkeit geprägt war.
 
-\glqq Angenomm'n, eines Nachts siehste, wie was schweres jenseits des Roffs von Obeds Dory gehievt wird un' am nächsten Tag hörst Du, dass ein junger Kerl vermisst wird? Na? Hat jemals jemand nochmal die geringste Spur von Hiram Gilman gefunden? Haben sie? Un' Nick Pierce un' Luelly Waite un' Adoniram Southwick un' Henry Garrison? Na? Hehehehe... die Gestalten sprachen Zeichensprache mit ihren Händen.... die, die richtige Hände hatten...
+\glqq Angenomm'n, eines Nachts siehste, wie was schweres jenseits des Riffs von Obeds Dory gehievt wird un' am nächsten Tag hörst Du, dass ein junger Kerl vermisst wird? Na? Hat jemals jemand nochmal die geringste Spur von Hiram Gilman gefunden? Haben sie? Un' Nick Pierce un' Luelly Waite un' Adoniram Southwick un' Henry Garrison? Na? Hehehehe... die Gestalten sprachen Zeichensprache mit ihren Händen.... die, die richtige Hände hatten...
 
 Also Junge, das war die Zeit als Obed langsam wieder auf die Beine kam. Die Leute sahen seine drei Töchter Golddinger tragen, die niemand vorher bei ihnen gesehen hatte und Rauch kam aus dem Schornstein der alten Raffinerie. And're Leute waren auch erfolgreich --- Fisch strömte in Scharen in den Hafen, fertig zum Fang un' weiß der Himmel wie groß die Ladungen waren, die wir nach Newburyport, Arkham und Boston rausschifften. Das war, als Obed die alte Eisenbahnzweigstrecke hierher bauen ließ. Ein paar Fischer aus Kingsport hatten vom Fischfang hier gehört un' kamen in ihren Schaluppen, aber sie gingen alle verschollen. Niemand hat sie je wieder geseh'n. Un' genau dann hatten unsere Leute den Esoterischen Orden des Dagon organisiert un' die Freimaurerhalle von der Golgatha-Kommende dafür gekauft... hehehe! Matt Eliot war'n Freimaurer un' gegen den Verkauf, aber er verschwand genau zu der Zeit.
 
@@ -78,13 +78,13 @@ Denk dran, ich sagte nicht, dass Obed die Dinge genauso haben wollte wie auf der
 
 Bis Sechsun'vierzig hatte sich die Stadt ein wenig umgeschaut un' nachgedacht. Zu viele Leute vermisst --- zu viele wilde Predigten in der Sonntagsmesse --- zuviel Gerede über das Riff. Ich glaub' ich hab' selbst was dazu getan als ich Stadtrat Mowry erzählt hab', was ich von der Kuppel aus geseh'n hatte. Da gab's 'ne Gruppe, die eines Nacht's Obed's Leuten raus auf's Riff gefolgt is un' ich hörte Schüsse zwischen deren Dories. Am nächs'n Tag saßen Obed un' zweiundreißig and're im Gefängnis un' alles wunderte sich, was da im Gange war un' was für eine Anklage erhoben wer'n würd. Gott, wenn ir'ndwer nur vorausgeseh'n hätte... 'n paar Wochen später, als so lange nix mehr ins Meer geworf'n word'n war...\grqq
 
-Zadok zeigte Zeichen von Angst und Erschöpfung und ich ließ ihn eine Weile schweigen, obwohl ich besorgt auf meine Uhr starrte. Die Gezeiten hatten gewechselt und die Flut kam heran. Und das Geräuch der Wellen schien ihn zu erregen. Ich war froh über die Flut, den bei Hochwasser würde der Fischgestank vielleicht nicht so stark sein. Wieder strengte ich mich an um sein Geflüster zu verstehen.
+Zadok zeigte Zeichen von Angst und Erschöpfung und ich ließ ihn eine Weile schweigen, obwohl ich besorgt auf meine Uhr starrte. Die Gezeiten hatten gewechselt und die Flut kam heran. Und das Geräusch der Wellen schien ihn zu erregen. Ich war froh über die Flut, den bei Hochwasser würde der Fischgestank vielleicht nicht so stark sein. Wieder strengte ich mich an um sein Geflüster zu verstehen.
 
 \glqq Jene furchtbare Nacht... ich hab' sie geseh'n... ich war oben in der Kuppel... Scharen von ihnen... Schwärme von ihnen... über's ganze Riff und schwammen den Hafen hoch in den Manuxet... Gott, was in den Straßen von Innsmouth in der Nacht passiert ist... sie ha'n an der Tür gerüttelt aber Pa wollte nicht aufmach'n... dann isser aus dem Küch'nfenster gestiegen mit seiner Muskete um Stadtrat Mowry zu find'n un' zu seh'n, was er tun könnt... Haufen von Toten und Sterbend'n... Schüsse un' Schreie... Geschrei im Ol'Square un' aufm Dorfplatz un' New Church Green... das Gefängnis überrannt... Proklamation... Verrat... haben's die Pest genannt als Menschen kamen un' rausfanden, dass die Hälfte unserer Leute fehlte... niemand über außer den'n, die sich Obed un' den Viechern anschlossen oder sonstwie Ruhe halten... hab' nie wieder was von mei'm Pa gehört...\grqq
 
 Der alte Mann keuchte und schwitzte übermäßig. Sein Griff um meine Schulter festigte sich.
 
-\glqq Am MOrgen klärte sich das alles --- aber 's gab Spur'n... Obed übernimmt irg'ndwie das Kommando un' sagt, dass die Dinge sich ändern wer'n... andere wer'n mit uns in der Messe beten und manche Häuser wür'n Gäste bewirten müssen... sie wollten sich mit uns kreuzen wie sie's mit den Kanaken getan haben un' er hatte nich' vor, sie aufzuhalten. So weit trieb es Obed.... wie'n Verrückter in der Sache. Er sagte sie hätt'n uns Fisch un' Schätze gebracht un' sollt'n dafür hab'n, wonach es ihnen verlangt...
+\glqq Am Morgen klärte sich das alles --- aber 's gab Spur'n... Obed übernimmt irg'ndwie das Kommando un' sagt, dass die Dinge sich ändern wer'n... andere wer'n mit uns in der Messe beten und manche Häuser wür'n Gäste bewirten müssen... sie wollten sich mit uns kreuzen wie sie's mit den Kanaken getan haben un' er hatte nich' vor, sie aufzuhalten. So weit trieb es Obed.... wie'n Verrückter in der Sache. Er sagte sie hätt'n uns Fisch un' Schätze gebracht un' sollt'n dafür hab'n, wonach es ihnen verlangt...
 
 Äußerlich hatte sich nix verändert, nur sollt'n wir uns von Fremd'n fernhalten wenn wir wüssten, was gut für uns sei. Wir alle musst'n den Eid des Dagon ablegen un' später gab's 'n zweiten un' 'n dritten Eid, die ein paar von uns ablegten. Die, die im Speziellen halfen un' im Gegenzug spezielle Belohnungen --- Gold un' so weiter --- Keine Widerrede, denn da sin' Millionen von denen da unt'n. Die wollen eigentlich nicht hochsteigen un' die Menschheit auslöschen, aber wenn sie verraten un' dazu gezwungen würden, könnten sie in die Richtung einiges tun. Wir hatten nich die alten Zauber um sie abzuschneiden wie die Leut' in der Südsee un' die Kanaken hatten ihre Geheimnisse nie preis gegeb'n.
 
@@ -119,11 +119,11 @@ Willste den wahren Schrecken erfahren, was? Also, das is' so --- es is' nich', w
 Hey, hörst Du mich? Ich sag dir, ich weiß was die Dinger sin' --- ich hab' sie eines Nachts gesehen als... EEEH --- AAHHHHH! YAAAAAHH...
 \grqq
 
-Die abscheuliche Plötzlichkeit und unmenschliche Schrecklichkeit des Schreies des alten Mannes ließ mich fast ohnmächtig werden. Seine Augen, an mir vorbei auf die übelriechende See starrend, schienen förmlich aus seinem Kopf zu springen während sein Gesicht sich zu einer Maske der Furcht, einer griechischen Tragödie werd verzog. Seine knochige Klaue grub sich in meine Schulter und er bewegte sich nicht als ich einen Kopfdrehte um zu sehen, was er erblickt hatte.
+Die abscheuliche Plötzlichkeit und das unmenschliche Grauen des alten Mannes' Schreies ließ mich fast ohnmächtig werden. Seine Augen, an mir vorbei auf die übelriechende See starrend, schienen förmlich aus seinem Kopf zu springen während sein Gesicht sich zu einer Maske der Furcht, einer griechischen Tragödie werd verzog. Seine knochige Klaue grub sich in meine Schulter und er bewegte sich nicht als ich einen Kopfdrehte um zu sehen, was er erblickt hatte.
 
-Da war für mich nichts zu sehen. Nur die herankommende Flut, die vielleicht ein Kräuseln näher kam als die entlegenen Brecher. Doch Zadok schüttelte mich und ich drehte mich zurück um das vor Furcht erstarte gesicht in ein Chaos aus zuckenden Augenbrauen und murmelnden, zahnlosen Kiefern. Bald kehrteseine Stimme zurück --- jedoch als ein wimmerndes Flüstern.
+Da war für mich nichts zu sehen. Nur die herankommende Flut, die vielleicht ein Kräuseln näher kam als die entlegenen Brecher. Doch Zadok schüttelte mich und ich drehte mich zurück um das vor Furcht erstarrte Gesicht in ein Chaos aus zuckenden Augenbrauen und murmelnden, zahnlosen Kiefern. Bald kehrte seine Stimme zurück --- jedoch als ein wimmerndes Flüstern.
 
-\glqq Verschwinde von hier! Verschwinde von hier! Sie hab'n uns geseh'n --- Verschwinde, wenn dir dein Leben lieb ist! Warte auf nix und niemanden --- sie wissen jetzt Bescheid --- Lauf was Dz jabbst --- schnell raus aus dieser Stadt ---
+\glqq Verschwinde von hier! Verschwinde von hier! Sie hab'n uns geseh'n --- Verschwinde, wenn dir dein Leben lieb ist! Warte auf nix und niemanden --- sie wissen jetzt Bescheid --- Lauf was Du kannst --- schnell raus aus dieser Stadt ---
 \grqq
 
 Eine weitere schwere Welle brach sich am losen Mauerwerk der ehemaligen Werft und wandelte das Flüstern des wahnsinnigen Alten in einen weiteren unmenschlichen und markerschütternden Schrei.
