--- a/The Shadow over Innsmouth/chapter2.tex
+++ b/The Shadow over Innsmouth/chapter2.tex
@@ -53,21 +53,21 @@ Manche Orte waren quasi verbotenes Gebiet, wie er unter beträchtlichem Aufwand 
 
 Und was die Einwohner von Innsmouth anging, so wusste der Junge kaum, was er mit ihnen anfangen sollte. Sie waren so verstohlen und so selten anzutreffen wie Tiere, die in Bauten lebten und man mochte sich kaum vorstellen, wie sie sich die Zeit vertrieben, außer durch die sporadische Fischerei. Vielleicht --- anhand der Menge von Schwarzgebranntem, das sie konsumierten zu urteilen --- lagen sie tagsüber die meisten Stunden, vom Alkoholrausch benommen darnieder. Sie schienen in ihrem Missmut in einer Art Gemeinschaft und gemeinsamer Auffassung vereint, die Welt zu verschmähen, als gäbe es andere, dieser vorzuziehende Sphären des Daseins. Ihr Aussehen --- besonders die starrenden Augen, die nie zu blinzeln schienen --- war sicherlich schockierend genug und ihre Stimmen klangen abscheulich. Es war entsetzlich, sie in ihren Kirchen des nachts singen zu hören, besonders zu ihren Hauptfestivitäten oder Erneuerungszeremonien, die zweimal im Jahr, am 30. April und am 31. Oktober stattfanden.
 
-Sie waren dem Wasser zugetan und schwammen häufig, sowohl im Fluss als auch im Hafenbecken. Schwimmwettkämpfe raus zum Devil Reef fanden oft statt und jedermann schien fähig, sich an diesem anstrengenden Sport zu beteiligen. Wenn man es sich recht überlegt, so waren generell nur eher junge Leute in der Öffentlichkeit zu sehen und von diesen schienen die ältesten am entstelltesten auszusehen. Ausnahmen waren meist Leute ohne jede Spur von Anomalie, wie der alte Angestellte im Hotel. Man mochte sich fragen, was aus der Masse an älteren Leuten wurde und ob das \glqq Innsmouth-Aussehen\grqq  nicht ein seltsames und heimtückisches Krankheitssymptom sei, das sein Opfer mehr und mehr ergriff, während die Jahre vorbeigingen.
+Sie waren dem Wasser zugetan und schwammen häufig, sowohl im Fluss als auch im Hafenbecken. Häufig fanden Schwimmwettkämpfe raus zum Devil Reef statt und jedermann schien fähig, sich an diesem anstrengenden Sport zu beteiligen. Wenn man es sich recht überlegt, so waren in der Öffentlichkeit generell nur eher junge Leute zu sehen und von diesen schienen die ältesten am entstelltesten auszusehen. Ausnahmen waren meist Leute ohne jede Spur von Anomalie, wie der alte Angestellte im Hotel. Man mochte sich fragen, was aus der Masse an älteren Leuten wurde und ob das \glqq Innsmouth-Aussehen\grqq  nicht ein seltsames und heimtückisches Krankheitssymptom sei, das sein Opfer mehr und mehr ergriff, während die Jahre vorbeigingen.
 
 Natürlich könnte nur ein sehr seltenes Leiden solche enormen und drastischen anatomischen Veränderungen in einem einzelnen ausgewachsenen Individuum hervorrufen --- Veränderungen, die Einfluss auf den Knochenbau bis zur Grundform des Schädels nahmen --- jedoch war nicht einmal dieser Gesichtspunkt rätselhafter oder beispielloser als die sichtbaren Züge der Krankheit im Ganzen. Es sei schwer, so bemerkte der Junge, zu diesem Thema irgendwelche wirklichen Schlüsse zu ziehen, da man die Einwohner nie persönlich kennenlerne, ganz gleich wie lang man in Innsmouth leben möge.
 
-Der Jüngling war sich sicher, dass Exemplare, noch schlimmer als die schlimmsten sichtbaren, in einigen der  Häuser eingeschlossen gehalten wurden. Manchmal hörten Leute die seltsamsten Geräusche. Die wackeligen  Bruchbuden nördlich des Flusses waren angeblich durch geheime Tunnel verbunden und boten somit ein wahres Labyrinth ungesehener Abartigkeiten. Welch fremdes Blut --- falls überhaupt welches --- in diesen Wesen floss, war unmöglich zu sagen. Sie hielten manchmal bestimmte besonders widerwärtige Gestalten außer Sichtweite, wenn Regierungsbeamte und andere aus der Außenwelt in die Stadt kamen.
+Der Jüngling war sich sicher, dass Exemplare, noch schlimmer als die schlimmsten sichtbaren, in einigen der  Häuser eingeschlossen gehalten wurden. Manchmal hörten Leute die seltsamsten Geräusche. Die wackeligen  Bruchbuden nördlich des Flusses waren angeblich durch geheime Tunnel verbunden und boten somit ein wahres Labyrinth ungesehener Abartigkeiten. Welch fremdes Blut --- falls überhaupt welches --- in diesen Wesen floss, war unmöglich zu sagen. Sie hielten manchmal diverse besonders widerwärtige Gestalten außer Sichtweite, wenn Regierungsbeamte und andere aus der Außenwelt in die Stadt kamen.
 
 Es wäre sinnlos, so mein Informant, die Einwohner irgendetwas über den Ort zu fragen. Der einzige, der reden mochte, war ein sehr alter, doch normal aussehender Mann, der im Armenhaus am nördlichen Rand der Stadt wohnte und seine Zeit herumstreunend oder vor dem Feuerwehrhaus lungernd herumbrachte. Dieser ergraute Kerl, Zadok Allen, war sechsundneunzig Jahre alt, etwas wirr im Kopf und außerdem der städtische Trunkenbold. Er war ein eigenartiges, verstohlenes Geschöpf und schaute ständig über seine Schulter als ob er in Furcht vor etwas lebe. Wenn er nüchtern war, konnte er überhaupt nicht dazu überredet werden, mit Fremden zu sprechen. Er war jedoch nicht im Stande, seinem liebsten Gift zu widerstehen und sobald er betrunken war, würde er die erstaunlichsten Fragmente geflüsterter Erinnerungen von sich geben.
 
-Insgesamt jedoch, könnten kaum sinnvolle Einzelheiten von ihm gewonnen werden, da seine Geschichten allesamt irrsinige, unvollständige Andeutungen unmöglichen Wunders und Entsetzens die keinen anderen Ursprung als seine eigene gestörte Fantasie haben können. Niemand glaubte ihm jemals, doch die Einwohner mochten nicht, wenn er trank und mit Fremden sprach und es war nicht immer sicher, gesehen zu werden wie man ihn befragte. Er war es wahrscheinlich von dem sich einige der wildesten bekannten Gerüchte und Irrtümer ableiteten.
+Insgesamt jedoch, könnten kaum sinnvolle Einzelheiten von ihm gewonnen werden, da seine Geschichten allesamt irrsinnige, unvollständige Andeutungen unmöglichen Wunders und Entsetzens die keinen anderen Ursprung als seine eigene gestörte Fantasie haben können. Niemand glaubte ihm jemals, doch die Einwohner mochten nicht, wenn er trank und mit Fremden sprach und es war nicht immer sicher, gesehen zu werden wie man ihn befragte. Er war es wahrscheinlich von dem sich einige der wildesten bekannten Gerüchte und Irrtümer ableiteten.
 
-Mehrere nicht einheimische Anwohner hatten von Zeit zu Zeit von grässlichen Anblicken berichtet, doch mit Zadoks Geschichten und den missgebildeten Bewohnern war es kein Wunder, dass solche Illusionen üblich geworden waren. Niemand der Fremden blieb jemals bis spät in die Nacht draußen, da es den weit verbreiteten Eindruck machte, dass es nicht klug sei, das zu tun. Außerdem waren die Straßen unheimlich dunkel.
+Mehrere nicht einheimische Anwohner hatten von Zeit zu Zeit von grässlichen Eindrücken berichtet, doch mit Zadoks Geschichten und den missgebildeten Bewohnern war es kein Wunder, dass solche Halluzinationen üblich geworden waren. Niemand der Fremden blieb jemals bis spät in die Nacht draußen, da es den weit verbreiteten Eindruck machte, dass es nicht klug sei, das zu tun. Außerdem waren die Straßen unheimlich dunkel.
 
-Was die Geschäfte anging --- die Fülle an Fisch war sicherlich verblüffend, doch die Einheimischen nutzten dies weniger und weniger aus. Zudem fielen die Preise und die Konkurrenz erstarkte. Natürlich lag das eigentliche Geschäft der Stadt in der Raffinerie, deren Handelsbüro am Dorfplatz sich nur ein paar Türen östlich von unserem Standort befand. Der Alte Marsh war nie zu sehen, fuhr jedoch manchmal in einem geschlossenen, verhangenen Wagen zur Arbeit.
+Was die Geschäfte anging --- die Fülle an Fisch war sicherlich verblüffend, doch die Einheimischen nutzten dies weniger und weniger. Zudem fielen die Preise und die Konkurrenz erstarkte. Natürlich lag das eigentliche Geschäft der Stadt in der Raffinerie, deren Handelsbüro am Dorfplatz sich nur ein paar Türen östlich von unserem Standort befand. Der Alte Marsh war nie zu sehen, fuhr jedoch manchmal in einem geschlossenen, verhangenen Wagen zur Arbeit.
 
-Es kursierten alle möglichen Gerüchte darüber, wie Marsh mittlerweile aussah. Er war einmal ein großer Dandy gewesen und man sagte, er trüge noch immer einen feinen Gehrock aus der Zeit Edwards VII, eigentümlich an gewisse Missbildungen angepasst. Seine Söhne hatten einst das Büro am Platz geführt, doch in letzter Zeit hielten sie sich meistens verborgen und überließen die Hauptlast der Geschäfte der jüngeren Generation. Die Söhne und ihre Schwestern sahen mittlerweile auch sehr seltsam aus, besonders die älteren und man erzählte sich, dass ihre Gesundheit versage.
+Es kursierten alle möglichen Gerüchte darüber, wie Marsh mittlerweile aussähe. Er war einmal ein großer Dandy gewesen und man sagte, er trüge noch immer einen feinen Gehrock aus der Zeit Edwards VII, eigentümlich an gewisse Missbildungen angepasst. Seine Söhne hatten einst das Büro am Platz geführt, doch in letzter Zeit hielten sie sich meistens verborgen und überließen die Hauptlast der Geschäfte der jüngeren Generation. Die Söhne und ihre Schwestern sahen mittlerweile auch sehr seltsam aus, besonders die älteren und man erzählte sich, dass ihre Gesundheit versage.
 
 Eine der Marsh-Töchter war eine  abstoßende, einem Reptil ähnlich sehende Frau, die ein Übermaß an merkwürdigem Schmuck, der ganz klar zur gleichen exotischen Tradition wie die fremdartige Tiara gehörte. Mein Informant hatte dies oft bemerkt und hatte gehört, wie man darüber sprach, dass dies aus einer Art geheimem Schatz stamme, entweder von Piraten oder Dämonen angelegt. Die Geistlichen --- oder Priester, oder wie auch immer sie hier nun genannt wurden --- trugen solche Schmuckstücke ebenfalls als Kopfschmuck, doch bekam man sie nur selten zu Gesicht. Mehr Exemplare hatte der Junge nicht gesehen, obwohl die Existenz von vielen weiteren in Innsmouth gerüchtet wurde.
 
@@ -80,11 +80,11 @@ So begann ich meine systematische, doch halb verdutzte Tour durch Innsmouth's en
 Als ich die Schlucht auf der Main Street Bridge wieder überquerte, traf ich auf einen äußerst verlassenen Bereich, bei dem mich ein ungewisser Schauder überkam. Ein Durcheinander zusammengefallener Giebeldächer formten eine zerklüftete und fantastische Silhouette, über der sich der makabere, enthauptete Turm einer uralten Kirche erhob. Einige Häuser entlang der Hauptstraße waren bewohnt, doch die meisten waren fest verbarrikadiert. Unbefestigte Seitenstraßen hinunter erblickte ich die schwarzen, klaffenden Fenster verlassener Hütten, von denen viele aufgrund ihres sinkenden Fundaments in gefährlichen und unglaublichen Winkeln lehnten.
 Diese Fenster starrten so gespenstisch, dass es mich Überwindung kostete, mich ostwärts dem Ufer zuzuwenden. Sicher schwillt der Schrecken eines verlassenen Hauses eher in Form einer geometrischen, denn einer arithmetischen Folge mit der Zahl der Häuser, die sich mehren um eine Stadt gänzlicher Verwüstung zu formen. Der Anblick solch endloser Alleen von fischäugiger Leere und Tod und der Gedanke an unendlich viele verbundene, düstere Räume, aufgegeben an Spinnweben, Erinnerungen und den Eroberer Wurm, bringen rudimentäre Furcht und Abscheu hervor, das gefestigtste Weltbild zu zerstreuen vermag.
 
-Fish Street war so verlassen wie die Hauptstraße, unterschied sich aber durch zahlreiche geziegelte und steinerne Lagerhäuser, die sich noch immer in ausgezeichnetem Zustand befanden. Water Street glich ihr beinahe gänzlich, bis auf die großen Lücken zum Ufer hin, wo einst Werften gestanden hatten. Ich begegnete keinem lebenden Wesen bis auf die verprengten Angler weit draußen an der Mole und ich hörte nichts bis auf das Plätschern der Wellen im Hafen und dem Tosen der Wasserfälle des Manuxet. Diese Stadt begann, mir mehr und mehr auf die Nerven zu gehen und ich schaute heimlich hinter mich als ich meinen Weg zurück über die wackelige Water Street Bridge nahm. Die Fish Street Bridge lag laut der Zeichnung in Trümmern.
+Fish Street war so verlassen wie die Hauptstraße, unterschied sich aber durch zahlreiche geziegelte und steinerne Lagerhäuser, die sich noch immer in ausgezeichnetem Zustand befanden. Water Street glich ihr beinahe gänzlich, bis auf die großen Lücken zum Ufer hin, wo einst Werften gestanden hatten. Ich begegnete keinem lebenden Wesen bis auf die versprengten Angler weit draußen an der Mole und ich hörte nichts bis auf das Plätschern der Wellen im Hafen und dem Tosen der Wasserfälle des Manuxet. Diese Stadt begann, mir mehr und mehr auf die Nerven zu gehen und ich schaute heimlich hinter mich als ich meinen Weg zurück über die wackelige Water Street Bridge nahm. Die Fish Street Bridge lag laut der Zeichnung in Trümmern.
 
-Nördlich des Flusses gab es Spuren verwahrlosten Lebens --- Aktive Fischverarbeitungen, rauchende Schornsteine und geflickte Dächer hier und da, gelegentliche Geräusche aus ungewissen Quellen und sporadische, watschelnde Silhouetten in den düsteren Straßen und unbefestigten Gassen --- doch schien mir dies noch beklemmender als die Verlassenheit im Süden. Zum einen waren die Menschen hässlicher und abartiger als jene näher zum Stadtzentrum hin, so dass ich mehrmals übel an etwas absolut fantastisches erinnert wurde, das ich nicht zuordnen konnte. Zweifellos trat die fremdartige Verformung der Einwohner von Innsmouth hier stärker zu Tage als weiter landeinwärts --- es sei denn, das \glqq Innsmouth-Aussehen\grqq war eine Krankheit und keine Blutlinie, in welchem Fall dieser Stadteil die weiter fortgeschrittenen Fälle beherbergte.
+Nördlich des Flusses gab es Spuren verwahrlosten Lebens --- Aktive Fischfabriken, rauchende Schornsteine und geflickte Dächer hier und da, gelegentliche Geräusche aus ungewissen Quellen und sporadische, watschelnde Silhouetten in den düsteren Straßen und unbefestigten Gassen --- doch schien mir dies noch beklemmender als die Verlassenheit im Süden. Zum einen waren die Menschen hässlicher und abartiger als jene näher zum Stadtzentrum hin, so dass ich mehrmals übel an etwas absolut fantastisches erinnert wurde, das ich nicht zuordnen konnte. Zweifellos trat die fremdartige Verformung der Einwohner von Innsmouth hier stärker zu Tage als weiter landeinwärts --- es sei denn, das \glqq Innsmouth-Aussehen\grqq war eine Krankheit und keine Blutlinie, in welchem Fall dieser Stadtteil die weiter fortgeschrittenen Fälle beherbergte.
 
-Ein Detail, das mich beunruhigte war die Verbreitung der wenigen, schwachen Geräusche, die ich vernahm. Sie sollten normalerweise aus den sichtbar bewohnten Häusern kommen, doch waren sie in Wirklichkeit oft am lautesten aus den am stärksten vebarrikadierten Fassaden zu hören. Man konnte Knarzen, Trippeln und zweifelhafte, heisere Laute wahrnehmen und ich musste unbehaglich an die geheimen Tunnel denken, die der Junge vom Lebensmittelladen angedeutet hatte. Plötzlich ertappte ich mich dabei, wie ich mich fragte, wie wohl die Stimmen dieser Bewohner klingen mögen. Ich hatte bisher noch kein gesprochenes Wort in diesem Viertel vernommen und war unerklärlich bestrebt dies auch so zu belassen.
+Ein Detail, das mich beunruhigte war die Verteilung der wenigen, schwachen Geräusche, die ich vernahm. Sie sollten normalerweise aus den sichtbar bewohnten Häusern kommen, doch waren sie in Wirklichkeit oft am lautesten aus den am stärksten verbarrikadierten Fassaden zu hören. Man konnte Knarzen, Trippeln und zweifelhafte, heisere Laute wahrnehmen und ich musste unbehaglich an die geheimen Tunnel denken, die der Junge vom Lebensmittelladen angedeutet hatte. Plötzlich ertappte ich mich dabei, wie ich mich fragte, wie wohl die Stimmen dieser Bewohner klingen mögen. Ich hatte bisher noch kein gesprochenes Wort in diesem Viertel vernommen und war unerklärlich bestrebt dies auch so zu belassen.
 
 Ich hastete aus dem abscheulichen Elendsviertel am Hafen und hielt nur lang genug an um mir zwei schöne, aber verfallene alte Kirchen in der Main und der Church Street anzuschauen. Mein nächstes logisches Ziel wäre New Church Green gewesen doch irgendwie konnte ich es nicht fertigbringen, noch einmal an der Kirche vorbeizugehen, in deren Keller ich die unfassbar furchteinflößende Gestalt des mit dem seltsamen Diadem gekrönten Priester oder Pastor erspäht hatte. Außerdem hatte mir der Junge aus dem Laden erzählt, dass die Kirchen sowie die Ordenshalle des Dagon keine angebrachten Viertel für Fremde waren.
 
@@ -92,8 +92,8 @@ Dementsprechend hielt ich mich nördlich, entlang der Main zur Martin, dann land
 
 In all diesen Straßen war kein Lebewesen zu sehen und ich wunderte mich ob der Abwesenheit von Hunden und Katzen in Innsmouth. Außerdem verblüfften und beängstigten mich die vielen, sogar in den besterhaltenen Villen, komplett verschlossenen Fenster im dritten Stock und im Dachgeschoss. Heimlichkeit und Verschwiegenheit schienen in dieser totgeschwiegenen Stadt voll von Fremdartigkeit und Tod allgegenwärtig und ich konnte dem Gefühl nicht entkommen, von allen Seiten aus dem Hinterhalt von durchtrieben starrenden, sich niemals schließenden Augen beobachtet zu werden.
 
-Ich erzitterte als die gesprungene Glocke in einem Turm zu meiner linken Drei schlug. Nur zu gut erinnerte ich mich an die plumpe Kirche von aus der diese Töne drangen. Ich folgte der Washington Street zum Fluss hin und sah ich mich nun einem ehealigen Industrie- und Handelsviertel gegenüber, bemerkte die Ruine einer Fabrik voraus und sah weitere, mit den Spuren eines alten Bahnhofs und einer überdachten Eisenbahnbrücke jenseits davon, oberhalb der Schlucht zu meiner Rechten.
+Ich erzitterte als die gesprungene Glocke in einem Turm zu meiner linken Drei schlug. Nur zu gut erinnerte ich mich an die plumpe Kirche von aus der diese Töne drangen. Ich folgte der Washington Street zum Fluss hin und sah ich mich nun einem ehemaligen Industrie- und Handelsviertel gegenüber, bemerkte die Ruine einer Fabrik voraus und sah weitere, mit den Spuren eines alten Bahnhofs und einer überdachten Eisenbahnbrücke jenseits davon, oberhalb der Schlucht zu meiner Rechten.
 
-Die unsichere Brücke vor mir war mit einem Warnschild versehen, doch ich nahm das Risiko auf mich und überquerte sie um wieder zum südlichen Ufer zurückzukeheren, wo die Spuren des Lebens wieder zum Vorschein kamen. Verstohlene, watschelnde Kreaturen starrten hintergründig in meine Richtung und normalere Gesichter betrachteten mich kalt und neugierig. Innsmouth wurde rasch unerträglich und ich bog in die Paine Street in Richtung des Platzes in der Hoffnung, dass mich irgendein Fahrzeug vor der noch in weiter Ferne liegenden Abfahrtszeit jenes finsteren Busses nach Arkham bringen könnte.
+Die unsichere Brücke vor mir war mit einem Warnschild versehen, doch ich nahm das Risiko auf mich und überquerte sie um wieder zum südlichen Ufer zurückzukehren, wo die Spuren des Lebens wieder zum Vorschein kamen. Verstohlene, watschelnde Kreaturen starrten hintergründig in meine Richtung und normalere Gesichter betrachteten mich kalt und neugierig. Innsmouth wurde rasch unerträglich und ich bog in die Paine Street in Richtung des Platzes in der Hoffnung, dass mich irgendein Fahrzeug vor der noch in weiter Ferne liegenden Abfahrtszeit jenes finsteren Busses nach Arkham bringen könnte.
 
 Da sah ich die das baufällige Spritzenhaus zu meiner linken und bemerkte den rotgesichtigen, rauschebärtigen, triefäugigen alten Mann in unscheinbaren Lumpen, der davor auf einer Bank saß und mit zwei zerzausten, aber nicht unnormal aussehenden Feuerwehrleuten sprach. Dies musste natürlich Zadok Allen sein, der halb verrückte, trunksüchtige Neunzigjährige, dessen Märchen vom alten Innsmouth und seinem Schatten so scheußlich und unglaublich waren.
