--- a/The Shadow over Innsmouth/Innsmouth.tex
+++ b/The Shadow over Innsmouth/Innsmouth.tex
@@ -1,10 +1,12 @@
-\documentclass[a4paper]{memoir}
+\documentclass[a4paper,openany]{memoir}
 \usepackage[ngerman]{babel}
 \usepackage{textcomp}
 \usepackage[cm-default]{fontspec}
 \usepackage{xunicode}
 \usepackage{xltxtra}
 \setromanfont[Mapping=tex-text]{Linux Libertine O}
+%\clubpenalty = 10000 
+%\widowpenalty = 10000 
 
 \begin{document}
 \title{Der Schatten über Innsmouth -- WORK IN PROGRESS!!!}
@@ -19,4 +21,5 @@
 \include{chapter2}
 \include{chapter3}
 \include{chapter4}
+\include{chapter5}
 \end{document}
