Hinweistext Innsmouth angepasst

--- a/The Shadow over Innsmouth/Innsmouth.tex
+++ b/The Shadow over Innsmouth/Innsmouth.tex
@@ -15,7 +15,7 @@
 \date{}
 \maketitle
 
-\textit{Diese Übersetzung ist noch unvollständig. 4 von 5 Kapiteln des Originals sind roh übersetzt, d.h. potentiell mit Übersetzungs- und Satzfehlern übersät. Außerdem fehlt noch jegliche Rechtschreibkorrektur. Das 5. Kapitel wird hinzugefügt, sobald die ersten vier revidiert wurden.}
+\textit{Diese Übersetzung ist noch unvollständig. Der Übersetzungstext ist noch größtenteils roh, d.h. mit Rechtschreib-, Übersetzungs- und Satzfehlern übersät. Die Revision bis zur Veröffentlichungsreife ist noch in Arbeit.}
 
 \include{chapter1}
 \include{chapter2}
